syntax = "proto3";

package mlsolid.v1;

import "google/protobuf/timestamp.proto";

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_PENDING = 1;
  STATUS_PROGRESS = 2;
  STATUS_SUCCESS = 3;
  STATUS_FAILED = 4;
}

message Val {
  oneof val {
    int64 int = 2;
    double double = 3;
    string str = 4;
  }
}

message MetaData {
  string name = 1;
  string type = 2;
  string run_id = 3;
}

message Content {
  bytes content = 1;
}

service MlsolidService {
  rpc Experiments(ExperimentsRequest) returns (ExperimentsResponse);
  rpc Experiment(ExperimentRequest) returns (ExperimentResponse);
  rpc CreateRun(CreateRunRequest) returns (CreateRunResponse);
  rpc Run(RunRequest) returns (RunResponse);
  rpc Runs(RunsRequest) returns (RunsResponse);
  rpc AddMetrics(AddMetricsRequest) returns (AddMetricsResponse);
  rpc AddArtifact(stream AddArtifactRequest) returns (AddArtifactResponse);
  rpc Artifact(ArtifactRequest) returns (stream ArtifactResponse);

  // Model registry methods
  rpc CreateModelRegistry(CreateModelRegistryRequest) returns (CreateModelRegistryResponse);
  rpc ModelRegistry(ModelRegistryRequest) returns (ModelRegistryResponse);
  rpc AddModelEntry(AddModelEntryRequest) returns (AddModelEntryResponse);
  rpc TaggedModel(TaggedModelRequest) returns (TaggedModelResponse);
  rpc StreamTaggedModel(StreamTaggedModelRequest) returns (stream StreamTaggedModelResponse);
  rpc TagModel(TagModelRequest) returns (TagModelResponse);
}

message Metric {
  string name = 1;
  repeated Val vals = 2;
}

message Run {
  string run_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string experiment_id = 3;
  map<string, Metric> metrics = 4;
}

message ModelEntry {
  string url = 1;
  repeated string tags = 2;
}

message ModelEntryList {
  repeated int32 indx = 1;
}

message ModelEntryTags {
  map<string, ModelEntryList> entries = 1;
}

message ExperimentsRequest {}

message ExperimentsResponse {
  repeated string exp_ids = 1;
}

message ExperimentRequest {
  string exp_id = 1;
}

message ExperimentResponse {
  repeated string run_ids = 1;
}

message CreateRunRequest {
  string run_id = 1;
  string experiment_id = 2;
}

message CreateRunResponse {
  string run_id = 1;
}

message RunRequest {
  string run_id = 1;
}

message RunResponse {
  string run_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string experiment_id = 3;
  map<string, Metric> metrics = 4;
}

message RunsRequest {
  repeated string run_ids = 1;
}

message RunsResponse {
  repeated Run runs = 1;
}

message AddMetricsRequest {
  string run_id = 1;
  repeated Metric metrics = 2;
}

message AddMetricsResponse {
  bool added = 1;
}

message AddArtifactRequest {
  oneof request {
    MetaData metadata = 1;
    Content content = 2;
  }
}

message AddArtifactResponse {
  string name = 1;
  Status status = 2;
  uint64 size = 3;
  string s3_url = 4;
}

message ArtifactRequest {
  string run_id = 1;
  string artifact_name = 2;
}

message ArtifactResponse {
  oneof request {
    MetaData metadata = 1;
    Content content = 2;
  }
}

message CreateModelRegistryRequest {
  string name = 1;
}

message CreateModelRegistryResponse {
  bool created = 1;
}

message ModelRegistryRequest {
  string name = 1;
}

message ModelRegistryResponse {
  string name = 1;
  repeated ModelEntry model_entries = 2;
  ModelEntryTags tags = 3;
}

message AddModelEntryRequest {
  string name = 1;
  string run_id = 2;
  string artifact_id = 3;
  repeated string tags = 4;
}

message AddModelEntryResponse {
  bool added = 1;
}

message TaggedModelRequest {
  string name = 1;
  string tag = 2;
}

message TaggedModelResponse {
  ModelEntry entry = 1;
}

message StreamTaggedModelRequest {
  string name = 1;
  string tag = 2;
}

message StreamTaggedModelResponse {
  oneof response {
    MetaData metadata = 1;
    Content content = 2;
  }
}

message TagModelRequest {
  string name = 1;
  int32 version = 2;
  repeated string tags = 3;
}

message TagModelResponse {
  bool added = 1;
}
